--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
              
             </div>
 
-            <div class="mt-10 mb-10 text-xl ">
+            <div class="mt-10 mb-10 text-xl text-white">
                 <button type="button" onclick='check()'
                     class="rounded-full bg-green-500 px-10 py-1 mr-10 shadow-md hover:bg-green-900 ">Check</button>
                 <button type="button" onclick='refresh()'
