index  file modified

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <h2 class="font-bold text-xl mt-5">Result : <span id="output" class="font-thin ">hhhh</span></h2>
              
             </div>
-
+ <h3>Appp</h3>
             <div class="mt-10 mb-10 text-xl text-white">
                 <button type="button" onclick='check()'
                     class="rounded-full bg-green-500 px-10 py-1 mr-10 shadow-md hover:bg-green-900 ">Check</button>
